# python-apib2openapi

./: Makefile  README.md  pyproject.toml
apib2openapi/: models.py  translator.py
tests/: test_apib2openapi.py  test_models.py  test_models_pbt.py
tests/fixtures/: petstore.out.yml
