[tool.poetry]
name = "apib2openapi"
version = "0.1.0"
description = ""
authors = ["Anentropic <ego@anentropic.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.4"
email_validator = "^1.0.5"
typing-extensions = "^3.7.4"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
